# conduitrs

./: .env  Cargo.toml  README.md  api_test.postman_collection.json
migrations/2024-04-01-210827_initial_schema_setup/: down.sql  up.sql
src/: main.rs
src/controller/: mod.rs  rest_controller.rs  settler_controller.rs
src/converter/: agreement_converter.rs  consideration_converter.rs  mod.rs  proposal_converter.rs
src/dto/: agreement_request.rs  agreement_response.rs  consideration_request.rs  consideration_response.rs  error_response.rs  mod.rs  proposal_request.rs  proposal_response.rs
src/model/: model.rs
src/repository/: agreement_repository.rs  consideration_repository.rs  mod.rs  proposal_repository.rs
src/schema/: schema.rs
